# github-public-event-streaming

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: run-unit-tests.yml
images/github-event-publisher/: Dockerfile
make/: 00_setup_gcp.mk  01_setup_development.mk  02_setup_infra.mk  03_setup_prefect.mk
src/: utils.py
src/bigquery/: create_bigquery_tables.py
src/conf/: config.yaml
src/gcs/: create_gcs_buckets.py
src/prefect/blocks/: create_gcp_credentials.py
src/pubsub/publisher/: publish_events.py  publish_watch_events.py
src/pubsub/subscriber/: create_gcs_subscription.py  create_subscription.py  create_watch_subscription.py  pull_events.py  pull_watch_events.py
src/pubsub/topics/: create_topics.py
tests/: test_utils.py
